trunk/Archive2/e5/a94231f3b96875/output
main.cpp: In instantiation of 'void foo<T>::changeValue(T) const [with T = int]':
main.cpp:17:21:   required from here
main.cpp:11:11: error: assignment of member 'foo<int>::value' in read-only object
     value = newValue;
           ^
